--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,4 @@
-NEXT_PUBLIC_ADMIN_PUBLIC_URL=https://les-experts.tn
-NEXT_PUBLIC_ADMIN_AUTH_SIGNIN=https://les-experts.tn/auth/login
-NEXT_PUBLIC_STRAPI_BACKEND_API_URL=https://api.les-experts.tn/api
-NEXT_PUBLIC_STRAPI_BACKEND_URL=https://api.les-experts.tn
+NEXT_PUBLIC_ADMIN_PUBLIC_URL=https://kondarschool.tn
+NEXT_PUBLIC_ADMIN_AUTH_SIGNIN=https://kondarschool.tn/auth/login
+NEXT_PUBLIC_STRAPI_BACKEND_API_URL=https://api.kondarschool.tn/api
+NEXT_PUBLIC_STRAPI_BACKEND_URL=https://api.kondarschool.tn
